fixing horizontal scroll bar in small screan

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: poppins,sans-serif;
+    overflow-x: hidden;
 }
 body{
     background-color: #000;
