--- a/src/components/themes/Themes.css
+++ b/src/components/themes/Themes.css
@@ -1,6 +1,7 @@
 .themes {
   padding: 80px 0;
   background-color: #000;
+  overflow-y: hidden;
 }
 
 .themes-container {
